# AstraeaDB-Official

./: .gitignore  CHANGELOG.md  Cargo.toml  Cybersecurity Use Case Plan.md  README.md  claude.md  implementation_plan.md  mcp-integration.md  remaining_items.md  rust-toolchain.toml
.github/workflows/: version-gate.yml
crates/astraea-algorithms/: Cargo.toml
crates/astraea-algorithms/src/: centrality.rs  community.rs  components.rs  lib.rs  pagerank.rs  test_support.rs
crates/astraea-cli/: Cargo.toml
crates/astraea-cli/src/: main.rs
crates/astraea-cluster/: Cargo.toml
crates/astraea-cluster/src/: coordinator.rs  lib.rs  partition.rs  shard.rs
crates/astraea-core/: Cargo.toml
crates/astraea-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/astraea-crypto/: Cargo.toml
crates/astraea-crypto/src/: encrypted.rs  engine.rs  keys.rs  lib.rs
crates/astraea-flight/: Cargo.toml
crates/astraea-flight/src/: lib.rs  schemas.rs  service.rs
crates/astraea-gnn/: Cargo.toml
crates/astraea-gnn/src/: backward.rs  lib.rs  message_passing.rs  model.rs  sampling.rs  sparse.rs  temporal.rs  tensor.rs  training.rs
crates/astraea-gpu/: Cargo.toml
crates/astraea-gpu/src/: backend.rs  cpu.rs  csr.rs  lib.rs
crates/astraea-graph/: Cargo.toml
crates/astraea-graph/benches/: graph_bench.rs  traversal_bench.rs
crates/astraea-graph/src/: cybersecurity_test.rs  graph.rs  lib.rs  test_utils.rs  traversal.rs
crates/astraea-mcp/: Cargo.toml
crates/astraea-mcp/src/: client.rs  errors.rs  lib.rs  prompts.rs  resources.rs  server.rs
crates/astraea-mcp/src/tools/: admin.rs  algorithms.rs  crud.rs  mod.rs  rag.rs  search.rs  temporal.rs  traversal.rs
crates/astraea-mcp/src/transport/: mod.rs  stdio.rs
crates/astraea-query/: Cargo.toml
crates/astraea-query/src/: ast.rs  executor.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/astraea-rag/: Cargo.toml
crates/astraea-rag/src/: embedding.rs  lib.rs  linearize.rs  llm.rs  pipeline.rs  subgraph.rs  token.rs
crates/astraea-server/: Cargo.toml  build.rs
crates/astraea-server/src/: auth.rs  connection.rs  grpc.rs  handler.rs  lib.rs  metrics.rs  protocol.rs  server.rs  tls.rs
crates/astraea-storage/: Cargo.toml
crates/astraea-storage/benches/: storage_bench.rs
crates/astraea-storage/src/: buffer_pool.rs  cold_storage.rs  engine.rs  file_manager.rs  label_index.rs  lib.rs  mvcc.rs  object_store_cold.rs  page.rs  page_io.rs  parquet_cold.rs  uring_page_io.rs  wal.rs
crates/astraea-vector/: Cargo.toml
crates/astraea-vector/benches/: vector_bench.rs
crates/astraea-vector/src/: distance.rs  hnsw.rs  index.rs  lib.rs  persistence.rs
docs/: gentle-intro-appA.html  gentle-intro-appB.html  gentle-intro-appC.html  gentle-intro-ch01.html  gentle-intro-ch02.html  gentle-intro-ch03.html  gentle-intro-ch04.html  gentle-intro-ch05.html  gentle-intro-ch06.html  gentle-intro-ch07.html  gentle-intro-ch08.html  gentle-intro-ch09.html  gentle-intro-ch10.html  gentle-intro-ch11.html  gentle-intro-ch12.html  gentle-intro-ch13.html  gentle-intro-ch14.html  gentle-intro-ch15.html  gentle-intro.css  gentle-intro.html  gentle-introduction-outline.md  gnn-elliptic-vignette.html  gnn-tutorial.html  go-client-plan.md  graphrag-claude-tutorial.html  index.html  java-client-plan.md  official-remote-process.md  python-client-expansion-plan.md  regression-testing.md  versioning-implementation-plan.md  versioning.md  wiki.html
examples/: cybersecurity_demo.py  python_client.py  r_client.R
go/astraeadb/: Makefile  arrow_client.go  client.go  doc.go  errors.go  errors_test.go  go.mod  go.sum  grpc_client.go  json_client.go  json_client_test.go  options.go  options_test.go  types.go
go/astraeadb/examples/basic/: main.go
go/astraeadb/examples/cybersecurity/: main.go
go/astraeadb/internal/backoff/: backoff.go  backoff_test.go
go/astraeadb/internal/protocol/: ndjson.go  ndjson_test.go
go/astraeadb/pb/astraea/: astraea.pb.go  astraea_grpc.pb.go
go/astraeadb/proto/: astraea.proto
java/astraeadb/: build.gradle.kts  gradle.properties  settings.gradle.kts
java/astraeadb/astraeadb-api/: build.gradle.kts
java/astraeadb/astraeadb-api/src/main/java/com/astraeadb/: AstraeaClient.java
java/astraeadb/astraeadb-api/src/main/java/com/astraeadb/exception/: AccessDeniedException.java  AstraeaException.java  AuthRequiredException.java  EdgeNotFoundException.java  ErrorClassifier.java  InvalidCredentialsException.java  NodeNotFoundException.java  NotConnectedException.java  VectorIndexNotConfiguredException.java
java/astraeadb/astraeadb-api/src/main/java/com/astraeadb/model/: BfsEntry.java  Edge.java  EdgeInput.java  NeighborEntry.java  Node.java  NodeInput.java  PathResult.java  PingResponse.java  QueryResult.java  RagResult.java  SearchResult.java  SubgraphResult.java  WalkStep.java
java/astraeadb/astraeadb-api/src/main/java/com/astraeadb/options/: EdgeOptions.java  HybridSearchOptions.java  NeighborOptions.java  RagOptions.java  SemanticOptions.java  SubgraphOptions.java
java/astraeadb/astraeadb-api/src/test/java/com/astraeadb/exception/: ErrorClassifierTest.java
java/astraeadb/astraeadb-api/src/test/java/com/astraeadb/model/: ModelSerializationTest.java
java/astraeadb/astraeadb-api/src/test/java/com/astraeadb/options/: OptionsTest.java
java/astraeadb/astraeadb-flight/: build.gradle.kts
java/astraeadb/astraeadb-flight/src/main/java/com/astraeadb/flight/: FlightAstraeaClient.java  FlightClientBuilder.java
java/astraeadb/astraeadb-grpc/: build.gradle.kts
java/astraeadb/astraeadb-json/: build.gradle.kts
java/astraeadb/astraeadb-unified/: build.gradle.kts
java/astraeadb/astraeadb-unified/src/main/java/com/astraeadb/: UnifiedClient.java
java/astraeadb/astraeadb-unified/src/test/java/com/astraeadb/: UnifiedClientTest.java
java/astraeadb/examples/: build.gradle.kts
proto/: astraea.proto
python/: README.md  pyproject.toml
python/astraeadb/: __init__.py  arrow_client.py  client.py  dataframe.py  json_client.py
python/tests/: test_json_client.py
(+17 files in other folders)
