[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "astraeadb"
version = "0.1.0"
description = "Python client for AstraeaDB graph database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
all = ["pyarrow>=14.0"]

[tool.setuptools.packages.find]
where = ["."]
