[package]
name = "astraea-cli"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
astraea-graph = { workspace = true, features = ["test-utils"] }
astraea-server = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
