[package]
name = "astraea-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
