[package]
name = "astraea-gnn"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
astraea-graph = { workspace = true, features = ["test-utils"] }
astraea-vector = { workspace = true }
