[package]
name = "astraea-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
astraea-server = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
