[package]
name = "astraea-query"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
