[package]
name = "astraea-rag"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
astraea-graph = { workspace = true, features = ["test-utils"] }
astraea-vector = { workspace = true }
