[package]
name = "astraea-server"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
astraea-storage = { workspace = true }
astraea-graph = { workspace = true }
astraea-query = { workspace = true }
astraea-vector = { workspace = true }
astraea-rag = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
astraea-graph = { workspace = true, features = ["test-utils"] }
rcgen = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
