[package]
name = "astraea-storage"
version.workspace = true
edition.workspace = true

[dependencies]
astraea-core = { workspace = true }
memmap2 = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
crc32fast = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
